# hgdb

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.rst  conftest.py  index.html  mkdocs.yml  setup.py  sitemap.xml
.github/workflows/: codeql-analysis.yml  deploy-linux.yml  deploy-macos.yml  docker.yml  lint.yml  linux.yml  macos.yml  memcheck.yml
bindings/cxx/: hgdb_runtime.hh
bindings/python/: CMakeLists.txt  README.md  setup.py
bindings/python/hgdb/: __init__.py  client.py  db.py  symbol.py
bindings/python/scripts/: deploy.sh  install.sh  toml2hgdb
bindings/python/src/: _hgdb.cc
bindings/systemverilog/: hgdb_pkg.sv
bindings/tcl/: hgdb.tcl
cmake/: FindFSDB.cmake  SetFlags.cmake
debugger/: index.html
docker/lint/: Dockerfile
docker/tcl/: Dockerfile
docker/test/: Dockerfile
docs/: README.md  debugger.md  index.md  internal.md  simulator.md  usage.md
include/: json.hh  schema.hh  schema.json
internal/: index.html
scripts/: ci.sh  deploy.sh  fix_wheel.py  format.sh  tidy.sh
scripts/benchmark/: .gitignore  dpi.patch  hgdb.patch  hgdb_debug_dpi.c  insert_dpi.py  run_rocketchip_bp.sh  run_rocketchip_dpi.sh  run_rocketchip_hgdb.sh  run_rocketchip_native.sh  run_rocketchip_tcl.sh  run_rocketchip_vcs.sh  tcl.patch  vcs.patch  vcs_break.tcl  visualize.py
scripts/eda/: hgdb-vcs  hgdb-verilator  hgdb-vsim  hgdb-vvp  hgdb-xrun
scripts/tools/: hgdb-db  hgdb-replay  hgdb-rewrite-vcd
simulator/: index.html
src/: CMakeLists.txt  db.cc  db.hh  debug.cc  debug.hh  eval.cc  eval.hh  jschema.hh.in  log.cc  log.hh  monitor.cc  monitor.hh  namespace.cc  namespace.hh  perf.cc  perf.hh  proto.cc  proto.hh  rtl.cc  rtl.hh  scheduler.cc  scheduler.hh  server.cc  server.hh  sim.cc  sim.hh  symbol.cc  symbol.hh  thread.cc  thread.hh  util.cc  util.hh
tests/: CMakeLists.txt  test_db.cc  test_debug.cc  test_debug_server.cc  test_debug_server.py  test_eval.cc  test_mock.cc  test_monitor.cc  test_proto.cc  test_rtl.cc  test_scheduler.cc  test_schema.cc  test_sim.cc  test_sim.py  test_thread.cc  test_util.hh  test_ws_server.cc  test_ws_server.py  util.hh  vpi_dummy.cc
tests/bindings/: test_cxx.cc  test_python.py  test_tcl.py  test_tcl.tcl
tests/bindings/vectors/: python.json  test_toml_scope_parsing.toml
tests/generators/: test_chisel.py  test_circt.py  test_kratos.py  util.py
tests/generators/vectors/: test_chisel_firrtl.fir  test_chisel_firrtl.toml  test_chisel_firrtl.v  test_chisel_firrtl_tb.cc  test_chisel_firrtl_tb.sv  test_circt.json  test_circt.sv  test_circt_tb.cc  test_kratos.cc  test_kratos.sv  test_kratos_data.cc  test_kratos_data.sv
tests/tools/: CMakeLists.txt  test_hgdb_replay.cc  test_hgdb_replay.py  test_hgdb_rewrite_vcd.py  test_sym_provider.py
tests/tools/vectors/: .gitignore  generate_fsdb.sh  generate_vcd.sh  waveform1.sv  waveform1.vcd  waveform2.sv  waveform2.vcd  waveform3.sv  waveform3.vcd  waveform4.sv  waveform4.vcd  waveform5.rewrite.vcd  waveform5.sv  waveform5.vcd  waveform6.fsdb  waveform6.sv
tests/vectors/: complex_db.json  test_assert.sv  test_complex.cc  test_complex.sv  test_complex_tb.sv  test_iverilog.v  test_set_value.sv  test_set_value_tb.cc  test_set_value_tb.sv
tools/: CMakeLists.txt
tools/fsdb/: CMakeLists.txt  fsdb.cc  fsdb.hh
tools/hgdb-db/: CMakeLists.txt  hgdb-db.cc
tools/hgdb-json/: CMakeLists.txt  hgdb-json.cc
tools/hgdb-replay/: CMakeLists.txt  engine.cc  engine.hh  hgdb-replay.cc  vcd.cc  vcd.hh  vcd_db.cc  vcd_db.hh  vpi.cc  vpi.hh  vpi_dummy.cc
tools/hgdb-rewrite-vcd/: CMakeLists.txt  hgdb-rewrite-vcd.cc
tools/vcd/: CMakeLists.txt  vcd.cc  vcd.hh
tools/waveform/: waveform.hh
usage/: index.html
